k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cluster-manager
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: http
